@@ -1,5 +1,7 @@
 3.2.1 (unreleased)
 ------------------
+
+#1971: Allow Reports in Landscape
 LIMS-2509: Correctly save empty values for CoordinateField and DurationField
 LIMS-2600: Some improvements and fixes for Statements
 LIMS-2567: Show all ARs on worksheet when adding Duplicate analysis
